Introduce security config for request permissions and refactor domain models.
- Add `SecurityConfig.java` to configure request permissions, enabling public access to `/api/review-game/**` endpoints while requiring authentication for others.
- Remove the `category` column from `ReviewGamePick`, simplifying its structure by omitting game category categorization.
- Update application configuration in `application.yml` to introduce job toggles (`JOB_INGEST_LIST`, `JOB_INGEST_REVIEWS`, etc.) and allow Spring profile overrides, enhancing flexibility for environment-specific settings.